--- a/app/templates/info/impressum.html
+++ b/app/templates/info/impressum.html
@@ -1,32 +1,34 @@
-{% extends 'layout/layout.html' %}
+{% extends 'base.html' %}
 
-{% block pageContent %}
+{% block body %}
 
-<!-- Header -->
-<div class="w3-container w3-center" style="padding-bottom: 32px;">
-    <h1><b>Impressum</b></h1>
-</div>
 
-<!-- Note -->
-<div class="w3-container w3-center w3-padding-32">
-    <div class="w3-panel w3-card w3-center">
-        <h5><b>Herausgeber</b></h5>
-        <p>Wirtschaftswissenschaftliche Fakultät der Universität Regensburg<br>
-            93040 Regensburg<br>
-            Email: spinde.team@wiwi.uni-regensburg.de<br>
-            Telefax: (0941) 943 - 4752<br>
-            Internet: <a href="http://www.uni-regensburg.de/wirtschaftswissenschaften/fakultaet/">Fakultätswebsite</a>
-        </p>
-        <h5><b>Hauptverantwortlicher</b></h5>
-        <p>Das Dekanat der Wirtschaftswissenschaftlichen Fakultaet<br>
-            <a href="https://www.uni-regensburg.de/wirtschaftswissenschaften/fakultaet/fakultaet/dekanat/dekanat/">Siehe
-                hier</a>
-        </p>
-
-        <h5><b>Redaktion / Text</b></h5>
-        <p>VB Regensburg</p>
+    <div class="w3-container w3-center w3-padding-top-32">
+        <h1><b>Impressum</b></h1>
     </div>
-</div>
+
+    <!-- imprint of the Institute of Information Systems -->
+    <div class="w3-container w3-center w3-padding-32 w3-padding-top-32">
+        <div class="w3-panel w3-card w3-center">
+            <h5><b>Anbieterkennzeichnung gem. § 6 Teledienstegesetz:</b></h5>
+            <p>Institut für Wirtschaftsinformatik<br>
+                Universitätsstraße 31 <br>
+                D-93053 Regensburg<br>
+                Telefax: (0941) 943 - 4752<br>
+                Internet: <a
+                        href="http://www.uni-regensburg.de/wirtschaftswissenschaften/fakultaet/">Fakultätswebsite</a>
+            </p>
+            <h5><b>Technischer Ansprechpartner:</b></h5>
+            <p>Armin Steinwender <br>
+                Telefon +49-941-943-3212 <br>
+                Telefax +49-941-943-81-3212
+            </p>
+
+
+            <h5><b>Redaktion / Text</b></h5>
+            <p>VB Regensburg</p>
+        </div>
+    </div>
 
 
 {% endblock %}
