--- a/app/templates/auth/logout.html
+++ b/app/templates/auth/logout.html
@@ -1,13 +1,14 @@
-{% extends 'layout/layout.html' %}
+{% extends 'base.html' %}
 
-{%block pageContent%}
+{% block body %}
 
-<!-- Header -->
-<div class="w3-container w3-center w3-padding-32">
-    <p>Du hast dich erfolgreich ausgeloggt!</p>
-    <a href="{{ url_for('bp_index.index')}}"
-       class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Startseite</a>
-</div>
+
+    <div class="w3-container w3-center w3-padding-32">
+    <!-- Displayed if the logout was successful -->
+        <p>Du hast dich erfolgreich ausgeloggt!</p>
+        <a href="{{ url_for('bp_index.index') }}"
+           class="w3-button w3-fids-color w3-padding-large w3-large w3-margin-top w3-round">Startseite</a>
+    </div>
 
 
 {% endblock %}
