--- a/app/templates/student/themenwahl.html
+++ b/app/templates/student/themenwahl.html
@@ -1,79 +1,141 @@
-{% extends 'layout/layout.html' %}
+{% extends 'base.html' %}
 
-{% block pageContent %}
+{% block body %}
 
+    <div class="w3-container w3-center w3-padding-top-32">
+        <h1><b>Themenwahl</b></h1>
 
-<div class="w3-container">
-    <h1><b>Themenwahl</b></h1>
-    <h5>für {{ selected_art }}</h5>
-
-    <div class="w3-bar w3-margin-bottom w3-round">
-        {% for art in arten %}
-            <button class="w3-bar-item w3-button {% if art.art_typ == selected_art %}w3-fids-color{% else %}w3-light-grey{% endif %}" onclick="location.href='{{ url_for('bp_student.themenwahl', art_typ=art.art_typ) }}'">{{ art.art_typ }}</button>
-        {% endfor %}
-    </div>
-
-
-
-<div class="w3-row-padding">
-        <div class="w3-half">
-            <h3>Verfügbare Projekte</h3>
-            {% for projekt in projekte %}
-                <div class="w3-card-4 w3-round w3-margin-bottom w3-light-grey w3-padding-small" draggable="true" ondragstart="drag(event)">
-                    <p><b>{{ projekt.titel }} </b> <br> {{ projekt.lehrstuhl.name }}</p>
-                </div>
+        <!-- navigation bar for selecting different types of topics -->
+        <div class="w3-bar w3-margin-bottom w3-round">
+            {% for art in arten %}
+                <button class="w3-bar-item w3-button {% if art.art_id == selected_art.art_id %}w3-fids-color{% else %}w3-light-grey{% endif %}"
+                        onclick="location.href='{{ url_for('bp_student.themenwahl',  art_id=art.art_id) }}'">{{ art.art_typ }}</button>
             {% endfor %}
         </div>
+    </div>
 
-        <div class="w3-half">
-            <form method="POST">
-                <h3>Prioritäten</h3>
-                <div class="w3-section">
-                    <label for="prio1">Priorität 1:</label>
-                    <select class="w3-select w3-border" name="prio1" id="prio1">
-                        <option value="" disabled selected>Wählen Sie ein Projekt</option>
-                        {% for projekt in projekte %}
-                            <option value="{{ projekt.id }}">{{ projekt.titel }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="w3-section">
-                    <label for="prio2">Priorität 2:</label>
-                    <select class="w3-select w3-border" name="prio2" id="prio2">
-                        <option value="" disabled selected>Wählen Sie ein Projekt</option>
-                        {% for projekt in projekte %}
-                            <option value="{{ projekt.id }}">{{ projekt.titel }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="w3-section">
-                    <label for="prio3">Priorität 3:</label>
-                    <select class="w3-select w3-border" name="prio3" id="prio3">
-                        <option value="" disabled selected>Wählen Sie ein Projekt</option>
-                        {% for projekt in projekte %}
-                            <option value="{{ projekt.id }}">{{ projekt.titel }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-                <button class="w3-button w3-fids-color w3-round-large w3-margin-top" type="submit">Priorisierung speichern</button>
-            </form>
-        </div>
-</div>
+    <div class="w3-row-padding">
+        {% if priorities %}
+            <!-- display current priorities if they exist -->
+            <div class="w3-container">
+                <h3>Prioritäten für {{ selected_art.art_typ }}</h3>
+                <ul class="w3-ul w3-left-align">
+                    {% for priority, projekt in priorities.items() %}
+                        <li class="w3-padding w3-margin w3-card-4">
+                            <p class="w3-large"><b>Priorität {{ priority }}: </b> {{ projekt.titel }}
+                                <a href="javascript:void(0)" class="w3-right w3-padding-small w3-text-black"
+                                   onclick="toggleDescription(this)">
+                                    <i class="fa fa-chevron-down"></i>
+                                </a><br>
+                                {{ projekt.lehrstuhl.professor }}: {{ projekt.lehrstuhl.name }}
+                            </p>
+                            <!-- project description, initially hidden -->
+                            <div class="description w3-hide">{{ projekt.beschreibung }}</div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% else %}
+            <!-- display available projects if no priorities are set -->
+            <div class="w3-half">
+                <h3>Verfügbare Projekte</h3>
+                <table class="w3-table w3-bordered w3-striped w3-hoverable">
+                    <tbody>
+                    {% for projekt in projekte %}
+                        <tr>
+                            <td>
+                                <p><b>{{ projekt.titel }}</b></p>
+                                <p>
+                                    {{ projekt.lehrstuhl.professor }}: {{ projekt.lehrstuhl.name }}
+                                    <a href="javascript:void(0)" class="w3-right w3-padding-small w3-text-black"
+                                       onclick="toggleDescription(this)">
+                                        <i class="fa fa-chevron-down"></i>
+                                    </a>
+                                </p>
+                                <div class="description w3-hide">{{ projekt.beschreibung }}</div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+            <!-- form to set new priorities -->
+            <div class="w3-half sticky-form">
+                <form method="POST" action="{{ url_for('bp_student.themenwahl', art_id=selected_art.art_id) }}">
+                    <h3>Prioritäten für {{ selected_art.art_typ }}</h3>
+                    <p><i class="fa fa-exclamation-triangle w3-text-red"></i><b>Wichtig:</b> Priorisierung nach Absenden
+                        nicht mehr änderbar!
+                        <i class="fa fa-exclamation-triangle w3-text-red"></i></p>
+                    <div class="w3-section w3-left-align">
+                        <b><label for="prio1">Priorität 1:</label></b>
+                        <select class="w3-select w3-border" name="prio1" id="prio1" onchange="updateDropdowns()"
+                                required>
+                            <option value="" disabled selected>Wählen Sie ein Thema</option>
+                            {% for projekt in projekte %}
+                                <option value="{{ projekt.projekt_id }}">{{ projekt.titel }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="w3-section w3-left-align">
+                        <b><label for="prio2">Priorität 2:</label></b>
+                        <select class="w3-select w3-border" name="prio2" id="prio2" onchange="updateDropdowns()"
+                                required>
+                            <option value="" disabled selected>Wählen Sie ein Thema</option>
+                            {% for projekt in projekte %}
+                                <option value="{{ projekt.projekt_id }}">{{ projekt.titel }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="w3-section w3-left-align">
+                        <b><label for="prio3">Priorität 3:</label></b>
+                        <select class="w3-select w3-border" name="prio3" id="prio3" onchange="updateDropdowns()"
+                                required>
+                            <option value="" disabled selected>Wählen Sie ein Thema</option>
+                            {% for projekt in projekte %}
+                                <option value="{{ projekt.projekt_id }}">{{ projekt.titel }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <button class="w3-button w3-fids-color w3-round-large w3-margin-top" type="submit">Speichern
+                    </button>
+                </form>
+            </div>
+        {% endif %}
+    </div>
+
+    <script>
+        // function to update dropdown options based on selected values
+        function updateDropdowns() {
+            const prio1 = document.getElementById('prio1').value;
+            const prio2 = document.getElementById('prio2').value;
+            const prio3 = document.getElementById('prio3').value;
+
+            updateDropdownOptions('prio2', prio1, prio3);
+            updateDropdownOptions('prio3', prio1, prio2);
+        }
+
+        function updateDropdownOptions(dropdownId, ...excludedValues) {
+            const dropdown = document.getElementById(dropdownId);
+            const options = dropdown.options;
+
+            for (let i = 0; i < options.length; i++) {
+                const option = options[i];
+                option.disabled = excludedValues.includes(option.value);
+            }
+        }
+
+        // function to toggle the description of a project
+        function toggleDescription(element) {
+            var descriptionDiv = element.parentElement.nextElementSibling;
+            if (descriptionDiv.classList.contains('w3-hide')) {
+                descriptionDiv.classList.remove('w3-hide');
+                element.innerHTML = '<i class="fa fa-chevron-up"></i>';
+            } else {
+                descriptionDiv.classList.add('w3-hide');
+                element.innerHTML = '<i class="fa fa-chevron-down"></i>';
+            }
+        }
+    </script>
 
 {% endblock %}
-
-<script>
-    function allowDrop(ev) {
-        ev.preventDefault();
-    }
-
-    function drag(ev) {
-        ev.dataTransfer.setData("text", ev.target.id);
-    }
-
-    function drop(ev) {
-        ev.preventDefault();
-        var data = ev.dataTransfer.getData("text");
-        ev.target.appendChild(document.getElementById(data));
-    }
-</script>>
